# waveqlab3d-gh

./: README.md  license
auxilary/: check_dat.py  check_plane.py  compare_plane_dat_gif.py  dat_timeseries_gif.py  generate_stations.py  plane_reader.py  plane_timeseries_gif.py  plot_plane_gif_dat.py  plot_plane_gif_plane.py
cmake/: run_mpi_test.cmake  run_test.cmake
conf/: Doxyfile.in
inputfile/: A1Test.in  Fault_Surface_Interpol.m  Gen_Surf_Mesh.m  MGTest.in  TPV10JCP2022.in  TPV36.in  elasticpml.in  input_file_pml.in  input_file_ratewk.in  interpol2d_dG.m  interpolate_surface.m  kyle_example.in  moment_tensor.in  plasticity.in  scec_interpolate.in  simple_topo.in  split_topography.m  strongly-rate-weakening.in  tensor.in  test1.in  test_moment_tensor.in  test_rate_and_state.in  test_slip_weakening.in  test_topo.in  test_upwind.in  topo2.in  topo_block1_dec.txt  topo_block2_dec.txt  tpv10.in  tpv101.in  tpv101_fractal.in  tpv102.in  tpv102_fractal.in  tpv26.in  tpv26_fractal.in  tpv26v2.in  tpv27.in  tpv27v2.in  tpv28.in  tpv28_fractal.in  (+11 more)
inputfile/materials_test/: tpv34.in
python/: plot_diff_results.py  plot_results.py  read_binary.py  vonKarman_3D.py
simulation/PML-12/: batch-jakar.sh  mpirun-jakar.sh
simulation/PML-12/input/: traditional_6_pml-off_anelastic-c2.in  traditional_6_pml-off_elastic.in  traditional_6_pml-on_anelastic-c2.in  traditional_6_pml-on_elastic.in  upwind-drp_6_pml-off_anelastic-c2.in  upwind-drp_6_pml-off_elastic.in  upwind-drp_6_pml-on_anelastic-c2.in  upwind-drp_6_pml-on_elastic.in  upwind_6_pml-off_anelastic-c2.in  upwind_6_pml-off_elastic.in  upwind_6_pml-on_anelastic-c2.in  upwind_6_pml-on_elastic.in
simulation/Test/: block_list.txt  station_list.txt  test.in  test.sh  test_1.in
src/: BoundaryConditions.f90  BoundaryConditions2.f90  BoundaryConditions3.f90  CMakeLists.txt  CouplingForcing.f90  Interface_Condition.f90  JU_xJU_yJU_z6.f90  RHS_Interior.f90  block.f90  boundary.f90  common.f90  datatypes.f90  domain.f90  elastic.f90  fault_output.f90  fields.f90  grid.f90  hdf5_output.f90  iface.f90  initial_stress_condition.f90  input_utils.f90  inter_material.f90  main.f90  material.f90  metrics.f90  mms.f90  moment_tensor.f90  mpi3d_interface.f90  mpi3dbasic.f90  mpi3dcomm.f90  mpi3dio.f90  original_RHS_interior.f90  parallel_write.f90  plane_output.f90  plastic.f90  plastic_material.f90  pml.f90  preprocessor.f90  seismogram.f90  slice_output.f90  (+2 more)
test_problems/: test_rup_cart_fric.in  test_rup_cart_fric_premesh.in  test_rup_cart_plastic.in  test_rup_curv_fric.in  test_rup_curv_fric_premesh.in  tpv28.in  tpv5.in
test_problems/truth/1/: test_rup_cart_fric.Hslice  test_rup_cart_fric.Vslice  test_rup_cart_fric_interface.S  test_rup_cart_fric_interface.Svel  test_rup_cart_fric_interface.Uface  test_rup_cart_fric_interface.Vface  test_rup_cart_fric_interface.Vhat  test_rup_cart_fric_interface.trup
test_problems/truth/2/: test_rup_curv_fric.Hslice  test_rup_curv_fric.Vslice  test_rup_curv_fric_interface.S  test_rup_curv_fric_interface.Svel  test_rup_curv_fric_interface.Uface  test_rup_curv_fric_interface.Uhat  test_rup_curv_fric_interface.Vface  test_rup_curv_fric_interface.trup
